# demo3

./: .gitignore  Cargo.toml  README.md  add_persons.sh  compile.sh  deploy.sh  dfx.json  list_persons.sh  redeploy.sh
benchmark/: Cargo.toml  bench1.sh  build.sh  canbench.yml  canbench_results.yml  check_insert.sh  deploy.sh  dfx.json  start_benchmark.sh
benchmark/perf/: perf.repl
benchmark/src/ic_rusqlite_bench_backend/: Cargo.toml  ic_rusqlite_bench_backend.did
benchmark/src/ic_rusqlite_bench_backend/src/: lib.rs
src/demo3_backend/: Cargo.toml  build.rs  demo3_backend.did
src/demo3_backend/src/: lib.rs
