[package]
name = "demo3_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
hex = "0.4.3"
serde = "1.0.164"
serde_json = "1.0.97"

ic-wasi-polyfill = "0.6"
ic-stable-structures = "0.6.5"
rusqlite = {version = "0.31", features = ["bundled", "wasm32-wasi-vfs"] }

