[package]
name = "ic_rusqlite_bench_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
ic-cdk = "0.8.1"
hex = "0.4.3"
serde = "1.0.163"
serde_json = "1.0"
ic-cdk-timers = "0.2" # Feel free to remove this dependency if you don't need timers
#ic-wasi-polyfill = { git = "https://github.com/wasm-forge/ic-wasi-polyfill", rev = "8b836a9ffac80885e0a217f936d6117d9c0ad9a5", features = ["transient"]}
ic-wasi-polyfill = { git = "https://github.com/wasm-forge/ic-wasi-polyfill", rev = "8b836a9ffac80885e0a217f936d6117d9c0ad9a5"}
rusqlite = { git = "https://github.com/rusqlite/rusqlite", version = "0.29.0", features = ["bundled", "wasm32-wasi-vfs"] }
