[package]
name = "ic_rusqlite_bench_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.10"
ic-cdk = "0.15"
hex = "0.4.3"
serde = "1.0.205"
serde_json = "1.0"

ic-stable-structures = "0.6.5"

#ic-wasi-polyfill = { path = "../../../../ic-wasi-polyfill", version = "0.6"}
ic-wasi-polyfill = { version = "0.5"}
rusqlite = { version = "0.31.0", features = ["wasm32-wasi-vfs", "bundled"] }
